--- a/deploy.yml
+++ b/deploy.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Pull Docker Image
       docker_image:
-        name: "calculator"
+        name: "abheetsethi/calculator:latest"
         source: pull
       register: docker_pull_result
 
@@ -26,4 +26,4 @@
       ignore_errors: yes
 
     - name: Run Docker container
-      shell: docker run -it -d --name calculator calculator
+      shell: docker run -it -d -p 8080:8080 --name calculator abheetsethi/calculator:latest
