--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,5 @@
 [all]
-127.0.0.1 ansible_user=abheet ansible_ssh_pass=rohini123* ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+127.0.0.1 ansible_user=abheet ansible_ssh_private_key_file=~/.ssh/id_rsa ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
