--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,3 @@
-[localhost]
-localhost ansible_connection=local ansible_python_interpreter=/usr/bin/python3
+[all]
+127.0.0.1 ansible_user=abheet ansible_ssh_private_key_file=~/.ssh/id_rsa ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_python_interpreter=/usr/bin/python3
